Chess Club/src/objects/Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Competition__c</fullName>
        <formula>ISPICKVAL( Type__c , &quot;Competition&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Losses__c</fullName>
        <label>Losses</label>
        <summarizedField>Attendance__c.Losses__c</summarizedField>
        <summaryForeignKey>Attendance__c.Meeting__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planning__c</fullName>
        <formula>ISPICKVAL( Type__c , &quot;Committee&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Players__c</fullName>
        <label>Players</label>
        <summaryForeignKey>Attendance__c.Meeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Supervisors__c</fullName>
        <label>Supervisors</label>
        <summaryForeignKey>Supervision__c.Meeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Meeting_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>VenueMeetings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wins__c</fullName>
        <label>Wins</label>
        <summarizedField>Attendance__c.Wins__c</summarizedField>
        <summaryForeignKey>Attendance__c.Meeting__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Meeting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MG-{0}</displayFormat>
        <label>Meeting#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <recordTypes>
        <fullName>Meeting</fullName>
        <active>true</active>
        <description>Meeting</description>
        <label>Meeting</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CommiteeMeetingSupervision</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c,&quot;Committee&quot;), Supervisors__c != 0)</errorConditionFormula>
        <errorMessage>Supervisors not needed for committee meeting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NonCompetitionGames</fullName>
        <active>true</active>
        <description>Check to make sure that games are held at competitions</description>
        <errorConditionFormula>AND(NOT(Competition__c),OR( Losses__c &gt; 0, Wins__c &gt; 0 ) )</errorConditionFormula>
        <errorMessage>Games should be held at competition meetings</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Players_Planning</fullName>
        <active>true</active>
        <description>Players at committee meeting</description>
        <errorConditionFormula>AND( Planning__c ,  Players__c &gt; 0 )</errorConditionFormula>
        <errorMessage>Players should not attend planning meetings.</errorMessage>
    </validationRules>
</CustomObject>